--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-pool_name="<POOL-NAME>" #For the image generation
+pool_ticker="<POOL-TICKER>" #For the image generation
 pool_id="<YOUR-POOLID-HERE>"
 vrf_key_location="/opt/cardano/cnode/priv/.../vrf.skey"
 #This are default locations if you used this guide https://cardano-community.github.io/guild-operators/basics/ 
