--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,4 @@ vrf_key_location="/opt/cardano/cnode/priv/.../vrf.skey"
 byron_genesis_location="/opt/cardano/cnode/files/byron-genesis.json"
 shelley_genesis_location="/opt/cardano/cnode/files/shelley-genesis.json"
 search_type="next" #Can be current, next or previous (Epoch)
+port="<PORT>"
