--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "node.js",
   "dependencies": {
     "canvas": "^2.10.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "node-schedule": "^2.1.0"
+    "express": "^4.18.2",
+    "node-schedule": "^2.1.0",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {},
   "scripts": {
